# scribe-to-notion

./: .gitignore  LICENSE.MIT  README.md  pyproject.toml
scribe_to_notion/: __init__.py
scribe_to_notion/adapters/: file_clipping_adapter.py  notion_client.py  notion_page_adapter.py
scribe_to_notion/cli/: __init__.py  main.py
scribe_to_notion/core/: __init__.py  interfaces.py  models.py  parser.py
scribe_to_notion/services/: import_service.py
tests/integration/: config.py.template  test_import_service_integration.py  test_notion_page_creation.py
tests/unit/: My Clippings.txt  test_clipping_parser.py  test_import_service.py
