[tool.poetry]
name = "scribe-to-notion"
version = "0.1.0"
description = "Import Amazon Scribe notes to Notion database"
authors = ["Yann CARDAILLAC"]
readme = "README.md"
packages = [{include = "scribe_to_notion"}]

[tool.poetry.dependencies]
python = "^3.10"
notion-client = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.poetry.scripts]
scribe-to-notion = "scribe_to_notion.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "--cov=scribe_to_notion --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["scribe_to_notion"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

